# ExelTool

./: .gitignore  .gitignore_!  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py  идеи для проекта  идеи для проекта.txt
src/: KOZYAFILE.csv  Test.csv  test.csv
src/ExelParser/Executable/: CMakeLists.txt  main.cpp
src/ExelParser/librarys/: CMakeLists.txt  Lib.cpp
src/ExelParser/librarys/includes/Lib/: Lib.hpp
